@@ -1,15 +1,22 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:1.22-alpine AS builder
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
 
-EXPOSE 8080
+COPY ./backend/go.mod ./backend/go.sum ./
 
-RUN mkdir /app
+RUN go mod download
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+COPY backend/ .
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+RUN go build -o main .
 
+FROM alpine:latest
+
+WORKDIR /app
+
+COPY --from=builder /app/main .
+COPY --from=builder /app/migrations ./migrations
+
+EXPOSE 3453
+
+CMD ["./main"]
